Fix font embedding to no longer crash on Linux

--- a/src/ReCap.Parser.Editor/App.axaml
+++ b/src/ReCap.Parser.Editor/App.axaml
@@ -1,21 +1,26 @@
-<Application
-  xmlns="https://github.com/avaloniaui"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:dev="clr-namespace:Devolutions.AvaloniaTheme.MacOS;assembly=Devolutions.AvaloniaTheme.MacOS"
-  RequestedThemeVariant="Dark"
-  x:Class="ReCap.Parser.Editor.App">
-  <Application.Styles>
-    <dev:DevolutionsMacOsTheme/>
-
-    <Style Selector="TreeView > TreeViewItem:nth-child(odd):not(:selected):not(:pointerover)">
-      <Setter Property="Background" Value="#202020" />
-    </Style>
-    <Style Selector="TreeViewItem TreeViewItem:nth-child(odd):not(:selected):not(:pointerover)">
-      <Setter Property="Background" Value="#202020" />
-    </Style>
-  </Application.Styles>
+<Application xmlns="https://github.com/avaloniaui"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            xmlns:dev="clr-namespace:Devolutions.AvaloniaTheme.MacOS;assembly=Devolutions.AvaloniaTheme.MacOS"
+            RequestedThemeVariant="Dark"
+            x:Class="ReCap.Parser.Editor.App">
     <Application.Resources>
-    <FontFamily x:Key="Geist">avares://ReCap.Parser.Editor/Assets/Fonts/Geist#Geist</FontFamily>
-    <FontFamily x:Key="GeistMono">avares://ReCap.Parser.Editor/Assets/Fonts/GeistMono#Geist Mono</FontFamily>
-  </Application.Resources>
+        <FontFamily x:Key="Geist">avares://ReCap.Parser.Editor/Assets/Geist#Geist</FontFamily>
+        <FontFamily x:Key="GeistMono">avares://ReCap.Parser.Editor/Assets/GeistMono#Geist Mono</FontFamily>
+    </Application.Resources>
+
+
+    <Application.Styles>
+        <dev:DevolutionsMacOsTheme />
+
+        <Style Selector=":is(TopLevel)">
+            <Setter Property="FontFamily" Value="{DynamicResource Geist}" />
+        </Style>
+
+        <Style Selector="TreeView > TreeViewItem:nth-child(odd):not(:selected):not(:pointerover)">
+            <Setter Property="Background" Value="#202020" />
+        </Style>
+        <Style Selector="TreeViewItem TreeViewItem:nth-child(odd):not(:selected):not(:pointerover)">
+            <Setter Property="Background" Value="#202020" />
+        </Style>
+    </Application.Styles>
 </Application>
