--- a/src/Editor/Views/Windows/PackageBrowserWindow.axaml
+++ b/src/Editor/Views/Windows/PackageBrowserWindow.axaml
@@ -4,8 +4,8 @@
         x:Class="ReCap.Parser.Editor.Views.Windows.PackageBrowserWindow"
         x:CompileBindings="False"
         Title="Asset Browser"
-        Width="1000" Height="650"
-        MinWidth="700" MinHeight="400"
+        Width="1200" Height="650"
+        MinWidth="800" MinHeight="400"
         WindowStartupLocation="CenterOwner">
         
   <Window.DataContext>
@@ -39,7 +39,7 @@
                    VerticalAlignment="Center" Margin="0,0,8,0" />
         <TextBox Grid.Column="1" 
                  Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                 Watermark="Filter by asset name..." />
+                 Watermark="Filter by asset name or tags..." />
         
         <TextBlock Grid.Column="3" Text="Type:" 
                    VerticalAlignment="Center" Margin="0,0,8,0" />
@@ -58,13 +58,15 @@
               CanUserSortColumns="True"
               IsReadOnly="True"
               GridLinesVisibility="Horizontal"
-              BorderThickness="0">
+              BorderThickness="0"
+              DoubleTapped="OnDataGridDoubleTapped">
       <DataGrid.Columns>
         <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="2*" />
-        <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="120" />
+        <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="100" />
         <DataGridTextColumn Header="Version" Binding="{Binding Version}" Width="70" />
         <DataGridTextColumn Header="Compiled" Binding="{Binding CompileTimeFormatted}" Width="150" />
-        <DataGridTextColumn Header="Source" Binding="{Binding SourceFile}" Width="*" />
+        <DataGridTextColumn Header="Tags" Binding="{Binding TagsDisplay}" Width="*" />
+        <DataGridTextColumn Header="Source" Binding="{Binding SourceFile}" Width="2*" />
       </DataGrid.Columns>
     </DataGrid>
     
